# simple-hotkeys

./: Cargo.toml  Makefile  README.md
examples/: mouse-test.smac  sdv.shk  sdv.smac  test.shk
src/: README.md  main.rs  parser.rs  runner.rs
