[package]
name = "simple-hotkeys"
version = "0.1.2"
edition = "2024"
description = "AutoHotkeys for Hyprland"
readme = "README.md"
repository = "https://github.com/dtc105/simple-hotkeys"
license-file = "LICENSE"
keywords = ["hotkey", "autohotkey", "hyprland"]
categories = ["accessibility", "games"]
include = ["/src", "/examples"]

[dependencies]
enigo = "0.6.1"
input = "0.9.1"
libc = "0.2.175"
